# Raylib-Template

./: CMakeLists.txt  README.md
core/src/: main.cpp
